# qtss

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  nul  push-github.sh  udo systemctl restart qtss-worker qtss-api  wyckoff_tmp.txt
crates/qtss-ai/: Cargo.toml
crates/qtss-ai/src/: approval.rs  circuit_breaker.rs  client.rs  config.rs  context_builder.rs  error.rs  feedback.rs  lib.rs  multi_gate.rs  notify_telegram_config.rs  parser.rs  provider_secrets.rs  safety.rs  smart_target_judge.rs  storage.rs  strategy_provider.rs
crates/qtss-ai/src/layers/: mod.rs  operational.rs  strategic.rs  tactical.rs
crates/qtss-ai/tests/: decision_exists_for_hash_it.rs  maybe_auto_approve_it.rs
crates/qtss-analysis/: Cargo.toml
crates/qtss-analysis/src/: engine_loop.rs  error.rs  lib.rs  scorer.rs
crates/qtss-api/: Cargo.toml
crates/qtss-api/src/: audit_event.rs  audit_http.rs  error.rs  locale.rs  main.rs  metrics.rs  rate_limit.rs  session.rs  state.rs  telegram_setup_analysis_webhook.rs  telegram_webhook.rs
crates/qtss-audit/: Cargo.toml
crates/qtss-audit/src/: chain.rs  error.rs  lib.rs  sink.rs  tests.rs  types.rs
crates/qtss-auth/: Cargo.toml
crates/qtss-auth/src/: error.rs  lib.rs  password.rs  roles.rs  session.rs  store.rs  tests.rs
crates/qtss-backtest/: Cargo.toml
crates/qtss-backtest/examples/: btc_4h_dip.json  btc_4h_dip_current.json  eth_1d_top.json
crates/qtss-backtest/src/: engine.rs  lib.rs  metrics.rs  optimize.rs  strategy.rs  v2.rs
crates/qtss-binance/: Cargo.toml
crates/qtss-binance/src/: bar_provider.rs  catalog_sync.rs  commission.rs  config.rs  error.rs  futures.rs  klines.rs  lib.rs  market_bars_backfill.rs  order_parse.rs  rest.rs  sign.rs  spot.rs  types.rs  ws.rs  ws_kline.rs
crates/qtss-common/: Cargo.toml
crates/qtss-common/src/: app_mode.rs  config_resolve.rs  database_url.rs  kill_switch.rs  lib.rs  logging.rs
crates/qtss-config/: Cargo.toml
crates/qtss-config/src/: error.rs  lib.rs  scope.rs  store.rs  tests.rs  types.rs
crates/qtss-confluence/: Cargo.toml
crates/qtss-confluence/src/: feature_source.rs  lib.rs  scoring.rs  types.rs
crates/qtss-domain/: Cargo.toml
crates/qtss-domain/src/: bar.rs  commission.rs  copy_trade.rs  exchange.rs  execution.rs  lib.rs  orders.rs  symbol.rs  tenancy.rs
crates/qtss-engine/: Cargo.toml
crates/qtss-engine/src/: lib.rs  symbols.rs  writer.rs
crates/qtss-eventbus/: Cargo.toml
crates/qtss-eventbus/src/: bus.rs  envelope.rs  error.rs  lib.rs  pg_bridge.rs  pg_notify_exporter.rs  tests.rs  topics.rs
crates/qtss-exec-binance/: Cargo.toml
crates/qtss-exec-binance/src/: adapter.rs  error.rs  lib.rs  translate.rs
crates/qtss-execution/: Cargo.toml
crates/qtss-execution-v2/: Cargo.toml
crates/qtss-execution-v2/src/: adapter.rs  builder.rs  error.rs  lib.rs  router.rs  sim.rs  tests.rs
crates/qtss-execution/src/: binance_live.rs  binance_order_status.rs  bybit_live.rs  dry.rs  gateway.rs  lib.rs  live.rs  manager.rs  okx_live.rs  reconcile.rs  unsupported_live.rs
crates/qtss-fees/: Cargo.toml
crates/qtss-fees/src/: book.rs  error.rs  lib.rs  model.rs  schedule.rs
crates/qtss-gui-api/: Cargo.toml
crates/qtss-gui-api/src/: ai_decisions.rs  audit.rs  blotter.rs  chart.rs  config_editor.rs  dashboard.rs  lib.rs  montecarlo.rs  regime.rs  risk.rs  scenarios.rs  strategy_manager.rs  users.rs
crates/qtss-indicators/: Cargo.toml
crates/qtss-indicators/src/: ad_line.rs  aroon.rs  bollinger.rs  chandelier.rs  cmf.rs  cvd.rs  divergence.rs  donchian.rs  ema.rs  fibonacci.rs  ichimoku.rs  indicator_bundle.rs  keltner.rs  lib.rs  macd.rs  mfi.rs  obv.rs  psar.rs  rsi.rs  stochastic.rs  supertrend.rs  ttm_squeeze.rs  volatility.rs  volume_profile.rs  vwap.rs  williams_r.rs
crates/qtss-notify/: Cargo.toml
crates/qtss-notify/src/: config.rs  digest_render.rs  dispatch.rs  error.rs  health.rs  lib.rs  lifecycle.rs  lifecycle_handlers.rs  locale.rs  poz_koruma.rs  price_tick.rs  smart_target.rs  telegram_html.rs  telegram_render.rs  types.rs  x_render.rs
crates/qtss-onchain/: Cargo.toml
crates/qtss-onchain/src/: aggregator.rs  cryptoquant.rs  derivatives.rs  glassnode.rs  lib.rs  nansen.rs  nansen_enriched.rs  stablecoin.rs  types.rs
crates/qtss-pivot-reversal/: Cargo.toml
crates/qtss-pivot-reversal/src/: lib.rs
crates/qtss-reconcile/: Cargo.toml
crates/qtss-reconcile/src/: binance_open_orders_patch.rs  lib.rs  v2.rs
crates/qtss-runtime/: Cargo.toml
crates/qtss-runtime/src/: context.rs  error.rs  lib.rs  policy.rs  storage_ns.rs
crates/qtss-secrets/: Cargo.toml
crates/qtss-secrets/src/: bootstrap.rs  cipher.rs  error.rs  kek.rs  lib.rs  reader.rs  store.rs  tests.rs
crates/qtss-setup-engine/: Cargo.toml
crates/qtss-setup-engine/src/: allocator.rs  classifier.rs  confluence_gate.rs  early_warning.rs  guard.rs  lib.rs  reverse.rs  sharing.rs  types.rs
crates/qtss-signal-card/: Cargo.toml  build.rs
crates/qtss-signal-card/assets/: README.txt
crates/qtss-signal-card/src/: ai_approval.rs  embedded_font.rs  lib.rs  operational_approval.rs  render.rs  subscores.rs
crates/qtss-storage/: Cargo.toml
crates/qtss-storage/src/: account_drawdown.rs  ai_approval.rs  audit_log.rs  backfill_progress.rs  catalog.rs  commission_resolver.rs  config.rs  config_tick.rs  copy_trade.rs  copy_trade_jobs.rs  data_snapshots.rs  digest.rs  engine_analysis.rs  error.rs  exchange_accounts.rs  exchange_fills.rs  exchange_orders.rs  external_fetch.rs  fill_long_estimate.rs  ingestion_state.rs  intake_playbook.rs  lib.rs  liquidation_guard_events.rs  live_positions.rs  market_bars.rs  market_bars_open.rs  market_confluence_snapshots.rs  migration_checksum_sync.rs  ml_prediction_stats.rs  ml_predictions.rs  models_registry.rs  nansen.rs  nansen_enriched.rs  nansen_setup_scan.rs  notify_outbox.rs  onchain_signal_scores.rs  paper.rs  pivot_cache.rs  pnl.rs  pool.rs  (+31 more)
crates/qtss-storage/tests/: migrations_apply.rs
trainer/: README.md  pyproject.toml
trainer/src/qtss_trainer/: __init__.py  __main__.py  db.py  features.py  loader.py  model.py  registry.py  server.py
(+1173 files in other folders)
