[workspace]
resolver = "2"
members = [
    "crates/qtss-common",
    "crates/qtss-config",
    "crates/qtss-eventbus",
    "crates/qtss-audit",
    "crates/qtss-secrets",
    "crates/qtss-auth",
    "crates/qtss-scheduler",
    "crates/qtss-pivots",
    "crates/qtss-regime",
    "crates/qtss-elliott",
    "crates/qtss-harmonic",
    "crates/qtss-classical",
    "crates/qtss-risk",
    "crates/qtss-fees",
    "crates/qtss-execution-v2",
    "crates/qtss-exec-binance",
    "crates/qtss-runtime",
    "crates/qtss-portfolio",
    "crates/qtss-gui-api",
    "crates/qtss-notify",
    "crates/qtss-domain",
    "crates/qtss-storage",
    "crates/qtss-execution",
    "crates/qtss-backtest",
    "crates/qtss-reporting",
    "crates/qtss-api",
    "crates/qtss-binance",
    "crates/qtss-worker",
    "crates/qtss-chart-patterns",
    "crates/qtss-nansen",
    "crates/qtss-strategy",
    "crates/qtss-analysis",
    "crates/qtss-reconcile",
    "crates/qtss-ai",
    "crates/qtss-signal-card",
    "crates/qtss-indicators",
    "crates/qtss-tbm",
    "crates/qtss-onchain",
    "crates/qtss-telegram-setup-analysis",
    "crates/qtss-range",
    "crates/qtss-vprofile",
    "crates/qtss-gap",
    "crates/qtss-candles",
    "crates/qtss-symbol-intel",
    "crates/qtss-engine",
    "crates/qtss-smc",
    "crates/qtss-derivatives-signals",
    "crates/qtss-orderflow",
    "crates/qtss-targets",
    "crates/qtss-validator",
    "crates/qtss-wyckoff",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["QTSS"]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
# `default-features = false`: varsayılan `any` MySQL/SQLite sürücülerini (ve `rsa` / RUSTSEC-2023-0071) çeker; yalnızca Postgres kullanıyoruz.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "rust_decimal", "migrate"] }
axum = { version = "0.8", features = ["macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "request-id"] }
hyper = "1"
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }

# Yerel workspace üyeleri — member crate’lerde `*.workspace = true` ile kullanılır.
qtss-common = { path = "crates/qtss-common" }
qtss-config = { path = "crates/qtss-config" }
qtss-eventbus = { path = "crates/qtss-eventbus" }
qtss-audit = { path = "crates/qtss-audit" }
qtss-secrets = { path = "crates/qtss-secrets" }
qtss-auth = { path = "crates/qtss-auth" }
qtss-scheduler = { path = "crates/qtss-scheduler" }
qtss-pivots = { path = "crates/qtss-pivots" }
qtss-regime = { path = "crates/qtss-regime" }
qtss-elliott = { path = "crates/qtss-elliott" }
qtss-harmonic = { path = "crates/qtss-harmonic" }
qtss-classical = { path = "crates/qtss-classical" }
qtss-risk = { path = "crates/qtss-risk" }
qtss-fees = { path = "crates/qtss-fees" }
qtss-exec-binance = { path = "crates/qtss-exec-binance" }
qtss-runtime = { path = "crates/qtss-runtime" }
qtss-portfolio = { path = "crates/qtss-portfolio" }
qtss-gui-api = { path = "crates/qtss-gui-api" }
qtss-execution-v2 = { path = "crates/qtss-execution-v2" }
qtss-notify = { path = "crates/qtss-notify" }
qtss-domain = { path = "crates/qtss-domain" }
qtss-storage = { path = "crates/qtss-storage" }
qtss-execution = { path = "crates/qtss-execution" }
qtss-backtest = { path = "crates/qtss-backtest" }
qtss-reporting = { path = "crates/qtss-reporting" }
qtss-binance = { path = "crates/qtss-binance" }
qtss-chart-patterns = { path = "crates/qtss-chart-patterns" }
qtss-nansen = { path = "crates/qtss-nansen" }
qtss-strategy = { path = "crates/qtss-strategy" }
qtss-analysis = { path = "crates/qtss-analysis" }
qtss-reconcile = { path = "crates/qtss-reconcile" }
qtss-ai = { path = "crates/qtss-ai" }
qtss-signal-card = { path = "crates/qtss-signal-card" }
qtss-indicators = { path = "crates/qtss-indicators" }
qtss-tbm = { path = "crates/qtss-tbm" }
qtss-onchain = { path = "crates/qtss-onchain" }
qtss-telegram-setup-analysis = { path = "crates/qtss-telegram-setup-analysis" }
qtss-range = { path = "crates/qtss-range" }
qtss-vprofile = { path = "crates/qtss-vprofile" }
qtss-gap = { path = "crates/qtss-gap" }
qtss-candles = { path = "crates/qtss-candles" }
qtss-symbol-intel = { path = "crates/qtss-symbol-intel" }
qtss-engine = { path = "crates/qtss-engine" }
qtss-smc = { path = "crates/qtss-smc" }
qtss-derivatives-signals = { path = "crates/qtss-derivatives-signals" }
qtss-orderflow = { path = "crates/qtss-orderflow" }
qtss-targets = { path = "crates/qtss-targets" }
qtss-validator = { path = "crates/qtss-validator" }
qtss-wyckoff = { path = "crates/qtss-wyckoff" }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
hmac = "0.12"
# `qtss-storage` ile aynı: `default-features = false` + `std` — tek `sha2` ağacı.
sha2 = { version = "0.10", default-features = false, features = ["std"] }
hex = "0.4"
rand = "0.8"
rust_decimal_macros = "1.36"
base64 = "0.22"
urlencoding = "2"
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "connect",
    "rustls-tls-webpki-roots",
] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tower_governor = "0.7"
ipnet = "2"
