[package]
name = "qtss-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qtss-common.workspace = true
qtss-storage.workspace = true
qtss-notify.workspace = true
qtss-signal-card.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
sha2.workspace = true
hex.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
