[package]
name = "qtss-analysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Engine symbol loop: trading range + signal dashboard snapshots (worker entrypoint)."

[dependencies]
async-trait.workspace = true
chrono.workspace = true
qtss-ai.workspace = true
qtss-common.workspace = true
qtss-chart-patterns.workspace = true
qtss-indicators.workspace = true
qtss-tbm.workspace = true
qtss-notify.workspace = true
qtss-storage.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
