[package]
name = "qtss-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "qtss-api"

[[bin]]
name = "qtss-api"
path = "src/main.rs"

[dependencies]
qtss-common.workspace = true
qtss-domain.workspace = true
qtss-storage.workspace = true
qtss-execution.workspace = true
qtss-binance.workspace = true
qtss-backtest.workspace = true
qtss-reporting.workspace = true
qtss-chart-patterns.workspace = true
qtss-notify.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
anyhow.workspace = true
ipnet.workspace = true
jsonwebtoken = "9"
argon2 = "0.5"
serde_urlencoded = "0.7"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
bytes = "1"

[[bin]]
name = "qtss-seed"
path = "src/bin/seed.rs"
