[package]
name = "qtss-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "qtss-api"

[features]
default = []
plotters_ttf = ["qtss-ai/plotters_ttf"]

[[bin]]
name = "qtss-api"
path = "src/main.rs"

[dependencies]
qtss-common.workspace = true
qtss-domain.workspace = true
qtss-storage.workspace = true
qtss-execution.workspace = true
qtss-reconcile.workspace = true
qtss-binance.workspace = true
qtss-backtest.workspace = true
qtss-reporting.workspace = true
qtss-chart-patterns.workspace = true
qtss-notify.workspace = true
qtss-ai.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
anyhow.workspace = true
ipnet.workspace = true
jsonwebtoken = "9"
argon2 = "0.5"
serde_urlencoded = "0.7"
sha2.workspace = true
rand.workspace = true
hex.workspace = true
bytes = "1"
reqwest.workspace = true
qtss-telegram-setup-analysis.workspace = true

[[bin]]
name = "qtss-seed"
path = "src/bin/seed.rs"
