[package]
name = "qtss-backtest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qtss-common.workspace = true
qtss-domain.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
uuid.workspace = true
rust_decimal_macros = "1.36"
