[package]
name = "qtss-backtest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qtss-common.workspace = true
qtss-domain.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
uuid.workspace = true
rust_decimal_macros.workspace = true
qtss-runtime.workspace = true
qtss-strategy.workspace = true
qtss-portfolio.workspace = true
qtss-execution-v2.workspace = true
qtss-fees.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
