[package]
name = "qtss-binance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qtss-domain.workspace = true
qtss-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

urlencoding.workspace = true
chrono.workspace = true
