[package]
name = "qtss-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
strum.workspace = true
thiserror.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
