[package]
name = "qtss-exec-binance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
qtss-domain.workspace = true
qtss-execution-v2.workspace = true
qtss-binance.workspace = true
qtss-fees.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
