[package]
name = "qtss-execution-v2"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros.workspace = true
qtss-domain.workspace = true
uuid.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
