[package]
name = "qtss-fees"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros.workspace = true
qtss-domain.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
