[package]
name = "qtss-gui-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
qtss-domain.workspace = true
qtss-portfolio.workspace = true
qtss-risk.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
