[package]
name = "qtss-indicators"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pure technical indicators for TBM (Top/Bottom Mining): EMA, MACD, Bollinger, Stochastic, MFI, OBV, CVD, VWAP, Fibonacci, volatility."

[dependencies]
serde.workspace = true
serde_json.workspace = true
