[package]
name = "qtss-notify"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
rust_decimal = "1.36"
sqlx.workspace = true
uuid.workspace = true
tracing.workspace = true
qtss-storage = { path = "../qtss-storage" }
async-trait = { workspace = true }
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
] }

[dev-dependencies]
rust_decimal_macros = "1.36"
tokio = { workspace = true, features = ["macros", "rt"] }
