[package]
name = "qtss-onchain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "On-chain & derivatives data fetchers + aggregator for TBM Onchain pillar (Faz 7.7)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
sqlx.workspace = true
qtss-storage.workspace = true
