[package]
name = "qtss-pivot-reversal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
uuid.workspace = true
qtss-domain.workspace = true
sqlx.workspace = true
async-trait.workspace = true
anyhow.workspace = true
