[package]
name = "qtss-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
qtss-domain.workspace = true
qtss-execution-v2.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
chrono.workspace = true
uuid.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros.workspace = true
