[package]
name = "qtss-secrets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx.workspace = true
rand.workspace = true
aes-gcm = "0.10"
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
