[package]
name = "qtss-secrets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx.workspace = true
rand.workspace = true
aes-gcm = "0.10"
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }

[[bin]]
name = "qtss-secret-cli"
path = "src/bin/qtss-secret-cli.rs"
