[package]
name = "qtss-setup-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Faz 8.0 — Setup Engine foundation. Profile-aware setup lifecycle, PositionGuard ratchet, allocator, reverse-signal evaluator."

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
qtss-confluence.workspace = true
