[package]
name = "qtss-signal-card"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PNG trading signal card for Telegram (plotters bitmap)."

[features]
default = []
# Enables plotters text (font-kit + fontconfig). Without it, PNG cards skip drawing or panic is caught.
# Debian/Ubuntu: sudo apt install libfontconfig1-dev libfreetype6-dev pkg-config
# RHEL/Alma: sudo dnf install fontconfig-devel freetype-devel pkgconf-pkg-config
plotters_ttf = ["plotters/ttf"]

[dependencies]
thiserror.workspace = true
qtss-chart-patterns.workspace = true
plotters = { version = "0.3.7", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "image",
] }
tempfile = "3"
