[package]
name = "qtss-signal-card"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PNG trading signal card for Telegram (plotters bitmap)."

[features]
default = []
# Kept for older manifests; embedded DejaVu + `plotters/ttf` is always used for text.
plotters_ttf = []

[dependencies]
thiserror.workspace = true
qtss-chart-patterns.workspace = true
plotters = { version = "0.3.7", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "image",
    "ttf",
] }
tempfile = "3"
