[package]
name = "qtss-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "qtss-sync-sqlx-checksums"
path = "src/bin/qtss_sync_sqlx_checksums.rs"

[dependencies]
qtss-common.workspace = true
qtss-domain.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
